Added Movie(models.Model) into models.py, ran makemigrations, and ran migrate
added the APIs in tests.py

--- a/mysite/moviereview/templates/moviereview/home.html
+++ b/mysite/moviereview/templates/moviereview/home.html
@@ -2,4 +2,7 @@
 
 {% block content %}
     <h1>Welcome to Sayed Movie Meter Portal</h1>
+    <div>
+        <img src="http://image.tmdb.org/t/p/original/5M0j0B18abtBI5gi2RhfjjurTqb.jpg" alt="Terminator 2">
+    </div>
 {% endblock %}
