--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -21,6 +20,9 @@
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
+        <div class="logo">
+            <img src="{% static 'images/logo.jpg' %}" alt="Sayed Movie Meter Logo">
+        </div>
     </header>
 
     <main>
