--- a/mysite/moviereview/templates/moviereview/home.html
+++ b/mysite/moviereview/templates/moviereview/home.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Welcome to Sayed Movie Meter Portal</h1>
+    <form method="post" action="{% url 'home' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Submit</button>
+    </form>
 {% endblock %}
