--- a/mysite/moviereview/templates/moviereview/home.html
+++ b/mysite/moviereview/templates/moviereview/home.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form method="post" action="{% url 'home' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
-    </form>
+<div class="home-container">
+    <h1>Welcome to Sayed Movie Meter Portal</h1>
+</div>
 {% endblock %}
