--- a/mysite/moviereview/templates/moviereview/movie_detail.html
+++ b/mysite/moviereview/templates/moviereview/movie_detail.html
@@ -9,7 +9,7 @@
         <div class="movie-info">
             <h1>{{ movie.title }}</h1>
             <p><strong>Release Date:</strong> {{ movie.release_date }}</p>
-            <p><strong>IMDb Rating:</strong> {{ movie.imdb_rating }}</p>
+            <p><strong>IMDb Rating:</strong> {{ movie.imdb_rating }} / 10</p>
             <p><strong>Runtime:</strong> {{ movie.runtime }} minutes</p>
             <p><strong>Genres:</strong> {{ movie.genres }}</p>
         </div>
