--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -17,7 +17,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Movies</a></li>
                 <li><a href="#">Top Rated</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="{% url 'search_movie' %}">Search</a></li>
             </ul>
         </nav>
         <div class="logo">
@@ -32,7 +32,6 @@
 
     <footer>
         <p>&copy; 2024 Sayed Movie Meter. All rights reserved.</p>
-        <p>Follow us on <a href="#">Social Media</a></p>
     </footer>
 </body>
 </html>
