--- a/mysite/moviereview/templates/moviereview/search_movie.html
+++ b/mysite/moviereview/templates/moviereview/search_movie.html
@@ -1,21 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="search-container">
-    <form method="post" action="{% url 'search_movie' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Search</button>
-    </form>
-</div>
-<div class="results-container">
-    {% for movie in movies %}
-    <a href="{% url 'movie_detail' movie.imdb_id %}" class="movie-link">
-        <div class="movie-result">
-            <h2>{{ movie.title }} ({{ movie.year }})</h2>
-        </div>
-    </a>
-    {% endfor %}
+<div class="search-result-container">
+    <div class="search-container">
+        <form method="post" action="{% url 'search_movie' %}">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Search</button>
+        </form>
+    </div>
+    <div class="results-container">
+        {% for movie in movies %}
+        <a href="{% url 'movie_detail' movie.imdb_id %}" class="movie-link">
+            <div class="movie-result">
+                <h2>{{ movie.title }} ({{ movie.year }})</h2>
+            </div>
+        </a>
+        {% endfor %}
+    </div>
 </div>
 {% endblock %}
 
