--- a/mysite/moviereview/templates/moviereview/registration/signup.html
+++ b/mysite/moviereview/templates/moviereview/registration/signup.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
+  <div class="signup-content">
+    <form method="post">
+        {% csrf_token %}
+        <h2>Sign up</h2>
+        {{ form.as_p }}
+        <button type="submit">Sign up</button>
+    </form>
+  </div>
 {% endblock %}
