Fixed the login.html & logout.html css issue

--- a/mysite/moviereview/templates/moviereview/registration/login.html
+++ b/mysite/moviereview/templates/moviereview/registration/login.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+  <div class="login-container">
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit">Login</button>
+    </form>
+  </div>
 {% endblock %}
