--- a/mysite/moviereview/templates/moviereview/registration/logout.html
+++ b/mysite/moviereview/templates/moviereview/registration/logout.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<main>
-    <h1>Logged Out</h1>
+<main class="logout-page">
     <p>You have been successfully logged out.</p>
     <a href="{% url 'login' %}">Log in again</a>
 </main>
