--- a/mysite/static/css/styles.css
+++ b/mysite/static/css/styles.css
@@ -212,7 +212,7 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
     padding: 10px;
     margin-top: 20px;
     color: white;
-    background-color: #007BFF; /* Bootstrap primary color */
+    background-color: #293241; /* Bootstrap primary color */
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -220,29 +220,91 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 }
 
 .signup-content form button:hover {
-    background-color: #0056b3; /* Darken button color on hover */
+    background-color: #89c2d9; /* Darken button color on hover */
 }
-/*!* Responsive Design *!*/
-/*@media (max-width: 1024px) {*/
-/*    header .logo img {*/
-/*        height: 80px; !* Slightly smaller logo for tablet *!*/
-/*    }*/
-/*    nav ul li {*/
-/*        display: block;*/
-/*        margin: 10px 0;*/
-/*    }*/
-/*    header {*/
-/*        padding: 10px 20px; !* Adjusted padding for smaller screens *!*/
-/*    }*/
-/*    main {*/
-/*        flex-direction: column;*/
-/*    }*/
-/*}*/
-/*@media (max-width: 600px) {*/
-/*    header .logo img {*/
-/*        height: 60px; !* Smaller logo for mobile *!*/
-/*    }*/
-/*    nav ul li {*/
-/*        margin: 5px 0;*/
-/*    }*/
-/*}*/
+
+/* General style for login page */
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+    background-color: #f4f4f4;
+}
+
+.login-container form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 350px;
+    padding: 40px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    background-color: #fff;
+    align-items: center; /* This ensures all children are centered */
+}
+
+.login-container form label {
+    self-align: start; /* Aligns the label to the start of the flex container */
+    width: 100%; /* Ensures label takes full width of the form for uniform alignment */
+    margin-bottom: 5px;
+    color: #333;
+    font-size: 14px;
+}
+
+.login-container form input[type="text"],
+.login-container form input[type="password"] {
+    padding: 10px 15px;
+    margin-bottom: 20px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    width: 100%;
+}
+
+.login-container form button {
+    padding: 12px 0;
+    color: white;
+    background-color: #293241;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 100%;
+}
+
+.login-container form button:hover {
+    background-color: #89c2d9;
+}
+
+* {
+    box-sizing: border-box; /* Includes padding and borders in the element's total width and height */
+}
+/* Logout Page Styles */
+.logout-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 80vh; /* Full viewport height to center content vertically */
+    text-align: center; /* Center text and button */
+}
+
+.logout-page p {
+    font-size: 30px; /* Larger text for the logout message */
+    margin-bottom: 20px; /* Space between message and button */
+}
+
+.logout-page a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #293241; /* Primary blue color */
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.logout-page a:hover {
+    background-color: #89c2d9; /* Darker shade on hover */
+}
