Finished the reviewed_movies.html along with its all configuration, and it is working nicely.

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -19,7 +19,7 @@
                         <a href="{% url 'home' %}">Home</a>
                     </li>
                     <li>
-                        <a href="#">Reviewed Movies</a>
+                        <a href="{% url 'reviewed_movies' %}">Reviewed Movies</a>
                     </li>
                     <li>
                         <a href="{% url 'search_movie' %}">Search</a>
@@ -38,7 +38,7 @@
                         <a href="{% url 'home' %}">Home</a>
                     </li>
                     <li>
-                        <a href="#">Reviewed Movies</a>
+                        <a href="{% url 'reviewed_movies' %}">Reviewed Movies</a>
                     </li>
                     <li>
                         <a href="{% url 'search_movie' %}">Search</a>
