--- a/mysite/static/css/styles.css
+++ b/mysite/static/css/styles.css
@@ -365,3 +365,47 @@ input[type="text"]:hover, input[type="search"]:hover, textarea:hover {
 .gap {
     gap: 50px;
 }
+/* styles.css */
+.reviewed-movie-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    padding: 80px;
+
+}
+
+.reviewed-movie-container {
+    width: 200px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+
+.reviewed-movie-container:hover {
+    transform: translateY(-5px);
+}
+
+.reviewed-movie-poster {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.reviewed-movie-info {
+    padding: 10px;
+    text-align: center;
+    background-color: #fff;
+}
+
+.reviewed-movie-info h3 {
+    font-size: 16px;
+    margin: 0;
+}
+
+.reviewed-movie-info p {
+    font-size: 14px;
+    color: #666;
+    margin-top: 5px;
+}
